@@ -1,0 +1,57 @@
+#ident $Id$
+EXPORTED {
+	global:
+		# Published NSS service module interfaces
+		_nss_ldap_endaliasent;
+		_nss_ldap_endetherent;
+		_nss_ldap_endgrent;
+		_nss_ldap_endhostent;
+		_nss_ldap_endnetent;
+		_nss_ldap_endprotoent;
+		_nss_ldap_endpwent;
+		_nss_ldap_endrpcent;
+		_nss_ldap_endservent;
+		_nss_ldap_endspent;
+		_nss_ldap_getaliasbyname_r;
+		_nss_ldap_getaliasent_r;
+		_nss_ldap_getetherent_r;
+		_nss_ldap_getgrent_r;
+		_nss_ldap_getgrgid_r;
+		_nss_ldap_getgrnam_r;
+		_nss_ldap_gethostbyaddr_r;
+		_nss_ldap_gethostbyname_r;
+		_nss_ldap_gethostent_r;
+		_nss_ldap_gethostton_r;
+		_nss_ldap_getnetbyaddr_r;
+		_nss_ldap_getnetbyname_r;
+		_nss_ldap_getnetent_r;
+		_nss_ldap_getntohost_r;
+		_nss_ldap_getprotobyname_r;
+		_nss_ldap_getprotobynumber_r;
+		_nss_ldap_getprotoent_r;
+		_nss_ldap_getpwent_r;
+		_nss_ldap_getpwnam_r;
+		_nss_ldap_getpwuid_r;
+		_nss_ldap_getrpcbyname_r;
+		_nss_ldap_getrpcbynumber_r;
+		_nss_ldap_getrpcent_r;
+		_nss_ldap_getservbyname_r;
+		_nss_ldap_getservbyport_r;
+		_nss_ldap_getservent_r;
+		_nss_ldap_getspent_r;
+		_nss_ldap_getspnam_r;
+		_nss_ldap_initgroups;
+		_nss_ldap_initgroups_dyn;
+		_nss_ldap_setaliasent;
+		_nss_ldap_setetherent;
+		_nss_ldap_setgrent;
+		_nss_ldap_sethostent;
+		_nss_ldap_setnetent;
+		_nss_ldap_setprotoent;
+		_nss_ldap_setpwent;
+		_nss_ldap_setrpcent;
+		_nss_ldap_setservent;
+		_nss_ldap_setspent;
+	local:
+		*;
+};
